static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Shadows+Into+Light+Two&display=swap');

html {
    height: 100%;
}

body {
    background: url('/media/site-background-main.jpeg') no-repeat fixed center;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Raleway';
}

.flex-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: space-between;
}

#logo-img {
    width: 12%;
    position: absolute;
    left: 6rem;
    top: -1.5rem;
}

a:hover,
a:visited, 
a:link, 
a:active { 
    text-decoration: none;
    color: unset;
}


hr {
    border-top: 1px solid white;
}

.page-header {
    font-size: 2rem;
}

@media(min-width:768px){
    .page-header {
        padding-left: 8.5%;
    }
    .page-sub-header {
    padding-left: 8.5%;
    }
}

.page-header-hr {
    width: 83%;
}

#special-message-banner {
    z-index: -999;
    position: relative;
    background-color: #263d41;
    border-bottom: 1px solid rgba(255,255,255,.5);
    padding: 7px;
    padding-bottom: 3px;
}

#scrolling-message-1 {
    margin-right: 400px;
}

/* --- Larger fonts ---- */

.larger-font {
    font-size: larger;
}

.largest-font {
    font-size: 3rem;
}

.large-font {
    font-size: large;
}

@media(max-width:1199px) {
    .larger-font {
    font-size: large;
    }
    .large-font {
        font-size: medium;
    }
}

@media(max-width:991px) {
    .larger-font {
    font-size: medium;
    }
    .large-font {
        font-size: small;
    }
}

/* Border / border radius settings  */

.br-1 {
    border-radius: 10px;
}

.br-2 {
    border-radius: 20px;
}

.br-2-top {
    border-top-left-radius: 20px !important;
    border-top-right-radius: 20px !important;
}

.br-1-top {
    border-top-left-radius: 10px !important;
    border-top-right-radius: 10px !important;
}


.br-2-bottom {
    border-bottom-left-radius: 20px !important;
    border-bottom-right-radius: 20px !important;
}

.border-white {
    border: 1px solid white;
}

.border-top-dark {
    border-top: 1px solid #607072;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.see-conversions-button {
    background: black;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.btn-light-green {
    background: #627072 !important;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important;
    border: 1px solid black;
}


.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: #363E46;
    color: white !important;
}

.btn-outline-muted {
    background: #607072;
    color: white !important;
    border: 1px solid rgba(255, 255, 255, 0.5);
}

.btn-outline-muted:hover,
.btn-outline-muted:active,
.btn-outline-muted:focus {
    background: #363E46 !important;
}


.see-conversions-button:hover,
.see-conversions-button:active,
.see-conversions-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background-color: black !important;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: #2F363D;
    z-index: -1;
}

/* Entry Site overlay */

#entry-overlay-content {
    margin-top: 30vh;
}

#overlay-site-entry {
    opacity : 1;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgb(47, 52, 56);
    width: 100%;
    z-index: 9000;
    display: none;
    -webkit-transition: opacity 1000ms linear;
    transition: opacity 1000ms linear;
}

#entry-overlay-logo {
    width: 20%;
    margin-left: auto;
    border: 3px solid rgba(255, 255, 255, 0.5);
    border-radius: 50%;
    padding: 2px;
    -webkit-transition: transform 700ms ease-in-out;
    transition: transform 700ms ease-in-out;
}


#entry-overlay-logo:hover {
    transform: scale(1.1);
    -webkit-transition: transform 700ms ease-in-out;
    transition: transform 700ms ease-in-out;
}

@media(max-width:1200px){
    #entry-overlay-logo {
    width: 40%;
    }

    #entry-overlay-content {
    margin-top: 20vh;
    }
}

@media(max-width:768px){
    #entry-overlay-content h3 {
        font-size: 1.2rem;
    }

    #entry-overlay-logo {
    width: 50%;
    }
}

/* Colours */

.bg-dark {
    background-color: #363E46 !important;
}

.bg-dark-main {
    background-color: #2F363D !important;
}

.bg-light {
    background-color: bisque !important;
}

.bg-cream {
    background-color: #f3f0dd !important;
}

a {
    color: unset;
}

/* Border classes */

.light-border {
    border: 4px solid rgba(194,208,194);
}

.light-color {
    background-color: rgb(194,208,194);
}

.bg-light-green {
    background-color: #627072 !important;
}

.border-muted {
    border: 1px solid rgba(255,255,255,.5);
}

.border-dark {
    border: 1px solid #607072;
}

/* Navbar */

#nav-bars {
    color: white !important;
    font-size: 1.5rem;
}

.navbar-light .navbar-toggler {
    color: rgba(0,0,0,.5);
    border-color: white;
}

.nav-link-fade-up::before {
  width: 40%;
  bottom: 5px;
  opacity: 0;
}

.nav-link-fade-up:hover::before {
  bottom: 10px;
  opacity: 1;
}

.nav-link-faq {
    padding: 8px;
}

.nav-link {
    padding-top: 2px;
}

.nav-link,
.nav-link-faq {
  color: rgb(255, 255, 255);
  opacity: 1;
}

.nav-link:hover,
.nav-link-faq:hover {
  opacity: 1;
}

.nav-link::before {
  transition: 300ms;
  height: 2px;
  left: 22%;
  content: "";
  position: absolute;
  background-color: white;
}

.nav-link-faq::before {
  transition: 300ms;
  height: 2px;
  left: 31%;
  content: "";
  position: absolute;
  background-color: white;
}
/* ... */

